--- a/WpfApplication3/Properties/Resources.resx
+++ b/WpfApplication3/Properties/Resources.resx
@@ -118,6 +118,12 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="InitData" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\InitData.sql;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
+  <data name="InitTable" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\InitTable.sql;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;gb2312</value>
+  </data>
   <data name="Pyramid_Logo_white_128x128" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Pyramid_Logo_white_128x128.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
